# libec

./: AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  README.md  VERSION_RULES  acinclude.m4  configure  configure.ac
contrib/: build-rpm.sh  libec-inst.xml.in  libec.pc.in  libec.spec  libec.spec.orig  rebuild.sh
docs/: Makefile.am  pkginfo.in
src/: .valgrind.supp  Makefile  Makefile.am  Makefile.in  global-vars.in  libec.c
src/include/libec/: compat.h
src/libec/: codes.h  compat.h  config.h.in  config.h.in~  libec.h
src/scripts/: libec-config.in
src/t/: debug.h  time.h
src/tests/: Makefile.am  Makefile.in  debug.h  main.h  test1.c  test1.h  time.c  time_diff.c
